[LayoutNG] Implement hit testing on list marker

When hit testing a list marker, we should hit the corresponding list
item element. This patch implements the same behavior in LayoutNG.

Bug: 855279
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I4d191098a444cf276b917451ae1f9ab4a0df2d88
Reviewed-on: https://chromium-review.googlesource.com/1111270
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: cathie chen <cathiechen@tencent.com>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569735}
Former-commit-id: 5cb687223b49d440e01c1b830310f16583e8e99a